Does not compile, i will check another video and conquer you

--- a/bookn/Makefile
+++ b/bookn/Makefile
@@ -1,3 +1,5 @@
 all:
-	g++ *.cpp -Lmysql -lmariadbclient
+	g++ *.cpp -Lmysql -lmariadbclient -lssl -lcrypto
 	./a.out
+
+# g++ *.cpp -Lmysql -lmariadbclient
