Does do compile

--- a/bookn/Makefile
+++ b/bookn/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ *.cpp -Lmysql -lmariadbclient -lssl -lcrypto
+	g++ -std=c++11 *.cpp -Lmysql -lmariadb
 	./a.out
 
-# g++ *.cpp -Lmysql -lmariadbclient
+# g++ *.cpp -Lmysql -lmariadbclient -lssl -lcrypto
