Api call correct, now need to put api inside user and create a list

--- a/01/Makefile
+++ b/01/Makefile
@@ -15,7 +15,7 @@ $(PROGRAM): $(SOURCES)
 
 # Define the execution rule
 run: $(PROGRAM)
-	./$(PROGRAM) $(FILENAME)
+	./$(PROGRAM) 
 
 # Define the phony targets
 .PHONY: clean run
